feat: :construction: use flexbox un poco para evitar el uso de modelado en caja
agrege input y el sub titulo del header

falta imagenes seccion de amigos y crear otras partes de la pagina

--- a/grid.html
+++ b/grid.html
@@ -8,12 +8,16 @@
 </head>
 <body class="container">
     <header class="containerheader">
-        este es el header
-        <img src="img/bxs-lock-alt.svg" alt="">
-        <img src="img/home-regular-24.png" alt=""> 
-        <img src="img/user-solid-24.png" alt="">
-        
+        <sub>My Space</sub>
+        <img src="img/bxs-lock-alt.svg" alt="" class="lock">
+        <img src="img/home-regular-24.png" alt="" class="home"> 
+        <img src="img/user-solid-24.png" alt="" class="user">
+        <input class="entrada"   type="text" placeholder="Search">
     </header>
+    <div class="users">
+        <sub>usuarios activos</sub>
+
+    </div>
     <aside class="containeraside">
       este es el aside
     </aside>
